--- a/alarm/app/src/main/AndroidManifest.xml
+++ b/alarm/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <receiver
+            android:name=".AlarmReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
