--- a/old_sell/app/src/main/AndroidManifest.xml
+++ b/old_sell/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity android:name=".home.AddArticleActivity">
 
         </activity>
+        <activity android:name=".chatdetail.ChatRoomActivity">
+
+        </activity>
     </application>
 
 </manifest>
